--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -1,1 +1,15 @@
 /livraria/
+/Editora.class
+/Autor.class
+/CadastroDeLivros.class
+/CalculadoreDeEstoque.class
+/CarrinhoDeCompras.class
+/Ebook.class
+/Livro.class
+/LivroFisico.class
+/MiniLivro.class
+/RegistrodeVendas.class
+/RegrasDeDesconto.class
+/Revista.class
+/Teste.class
+/Produto.class
